Cleanup the publishing process

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -162,7 +162,7 @@ modrinth {
     projectId = '8BmcQJ2H'
     versionNumber = project.version
     versionName = "Fabric ${minecraft_version}"
-    uploadFile = remapJar
+    uploadFile = tasks.remapJar
     changelog = rootProject.file("changelog.txt").text
     gameVersions = [minecraft_version]
     versionType = "release"
@@ -178,7 +178,7 @@ task publishToCurseForge(type:  net.darkhax.curseforgegradle.TaskPublishCurseFor
     group = "publishing"
     apiToken = System.getenv("curseforge.apitoken") ?: "Invalid/No API Token Found"
 
-    def mainFile = upload(388172, file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar"))
+    def mainFile = upload(388172, tasks.remapJar)
     mainFile.releaseType = "release"
     mainFile.addModLoader("Forge")
     mainFile.addGameVersion(minecraft_version)
@@ -189,4 +189,4 @@ task publishToCurseForge(type:  net.darkhax.curseforgegradle.TaskPublishCurseFor
     //https://github.com/Darkhax/CurseForgeGradle#available-properties
 }
 
-tasks.publishToCurseForge.dependsOn(tasks.build)
+publish.finalizedBy('modrinth', 'publishToCurseForge')
