--- a/core/gradle.properties
+++ b/core/gradle.properties
@@ -1,4 +1,11 @@
-#bumped the core version.
+# Project Settings
 version=2.0.4.2
 group=software.bernie.geckolib
 authors=Gecko, AzureDoom, Tslat
+project_name=GeckoLib Core
+
+# Dependencies
+mclib_version=20
+lang3_version=3.12.0
+gson_version=2.10
+fastutil_version=8.5.9
