--- a/settings.gradle
+++ b/settings.gradle
@@ -25,4 +25,4 @@ plugins {
 }
 
 rootProject.name = 'GeckoLib'
-include 'core', 'Fabric', 'Forge', 'NeoForge'
+include 'core', 'Fabric', 'Forge'/*, 'NeoForge'*/
