--- a/gradle.properties
+++ b/gradle.properties
@@ -12,19 +12,19 @@ mod_authors=Gecko, Eliot, AzureDoom, DerToaster, Tslat, Witixin
 mod_description=GeckoLib is an animation engine for Minecraft Mods, with support for complex 3D keyframe-based animations, 30+ easings, concurrent animation support, sound and particle keyframes, event keyframes, and more.
 
 # General Dependencies
-minecraft_version_range=[1.20.1,)
-minecraft_version=1.20.1
-parchment_version=2023.09.03
+minecraft_version_range=[1.20.2,)
+minecraft_version=1.20.2
+parchment_version=1.20.1-2023.09.03
 mclib_version=20
 
 # Fabric Settings
 fabric_loader_version=0.14.22
-fabric_api_version=0.89.0+1.20.1
+fabric_api_version=0.89.2+1.20.2
 
 # Forge Settings
-forge_loader_range=[47,)
-forge_version_range=[47.1,)
-forge_version=47.2.0
+forge_loader_range=[48,)
+forge_version_range=[48,)
+forge_version=48.0.7
 
 # Neoforge Settings
 neoforge_version_range=[47,)
