--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.daemon=false
 
 # Project Settings
 mod_id=geckolib
-version=4.3
+version=4.3.1
 mod_display_name=GeckoLib 4
 group=software.bernie.geckolib
 mod_license=MIT
@@ -14,19 +14,19 @@ mod_description=GeckoLib is an animation engine for Minecraft Mods, with support
 # General Dependencies
 minecraft_version_range=[1.20.2,)
 minecraft_version=1.20.2
-parchment_version=1.20.1-2023.09.03
+parchment_version=2023.10.22
 mclib_version=20
 
 # Fabric Settings
-fabric_loader_version=0.14.22
-fabric_api_version=0.89.2+1.20.2
+fabric_loader_version=0.15.0
+fabric_api_version=0.91.1+1.20.2
 
 # Forge Settings
 forge_loader_range=[48,)
 forge_version_range=[48,)
-forge_version=48.0.7
+forge_version=48.0.49
 
 # Neoforge Settings
-neoforge_loader_range=[47,)
-neoforge_version_range=[47.1,)
-neoforge_version=47.1.76
+neoforge_loader_range=[1,)
+neoforge_version_range=[20.2,)
+neoforge_version=20.2.86
