--- a/gradle.properties
+++ b/gradle.properties
@@ -12,21 +12,21 @@ mod_authors=Gecko, Eliot, AzureDoom, DerToaster, Tslat, Witixin
 mod_description=GeckoLib is an animation engine for Minecraft Mods, with support for complex 3D keyframe-based animations, 30+ easings, concurrent animation support, sound and particle keyframes, event keyframes, and more.
 
 # General Dependencies
-minecraft_version_range=[1.20.2,)
-minecraft_version=1.20.2
-parchment_version=2023.10.22
+minecraft_version_range=[1.20.3,)
+minecraft_version=1.20.3
+parchment_version=1.20.2-2023.10.22
 mclib_version=20
 
 # Fabric Settings
 fabric_loader_version=0.15.0
-fabric_api_version=0.91.1+1.20.2
+fabric_api_version=0.91.1+1.20.3
 
 # Forge Settings
-forge_loader_range=[48,)
-forge_version_range=[48,)
-forge_version=48.0.49
+forge_loader_range=[49,)
+forge_version_range=[49,)
+forge_version=49.0.1
 
 # Neoforge Settings
 neoforge_loader_range=[1,)
-neoforge_version_range=[20.2,)
-neoforge_version=20.2.86
+neoforge_version_range=[20.3,)
+neoforge_version=20.3.7-beta
