--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -145,6 +145,10 @@ processResources {
     }
 }
 
+tasks.withType(GenerateModuleMetadata) {
+    enabled = false
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
