--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'eclipse' //both are required for the ideCopyResourcesTask
     id 'idea'
     id 'maven-publish'
-    id 'net.neoforged.gradle.userdev' version '7.0.55'
+    id 'net.neoforged.gradle.userdev' version '7.+'
     //id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'com.modrinth.minotaur' version '2.8.3'
     id 'net.darkhax.curseforgegradle' version '1.1.15'
