--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -27,11 +27,18 @@ repositories {
             includeGroup "com.eliotlash.mclib"
         }
     }
+    maven {
+        name = "ParchmentMC"
+        url = 'https://maven.parchmentmc.org'
+    }
 }
 
 dependencies {
     minecraft "com.mojang:minecraft:${minecraft_version}"
-    mappings loom.officialMojangMappings()
+    mappings loom.layered() {
+        officialMojangMappings()
+        parchment("org.parchmentmc.data:parchment-${mappings_mc_version}:${parchment_version}@zip")
+    }
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 
