--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id 'idea'
     id 'maven-publish'
     id 'net.neoforged.gradle.userdev' version '7.+'
-    //id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'com.modrinth.minotaur' version '2.8.3'
     id 'net.darkhax.curseforgegradle' version '1.1.15'
 }
@@ -14,6 +13,13 @@ import groovy.json.JsonSlurper
 
 base {
     archivesName = "geckolib-neoforge-${minecraft_version}"
+}
+
+subsystems {
+    parchment {
+        minecraftVersion = project.mappings_mc_version
+        mappingsVersion = project.parchment_version
+    }
 }
 
 minecraft {
