--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.daemon=false
 
 # Project Settings
 mod_id=geckolib
-version=4.3.2
+version=4.3.3
 mod_display_name=GeckoLib 4
 group=software.bernie.geckolib
 mod_license=MIT
@@ -14,19 +14,20 @@ mod_description=GeckoLib is an animation engine for Minecraft Mods, with support
 # General Dependencies
 minecraft_version_range=[1.20.4,)
 minecraft_version=1.20.4
-parchment_version=1.20.2-2023.12.10
+mappings_mc_version=1.20.3
+parchment_version=2023.12.31
 mclib_version=20
 
 # Fabric Settings
 fabric_loader_version=0.15.3
-fabric_api_version=0.91.3+1.20.4
+fabric_api_version=0.92.0+1.20.4
 
 # Forge Settings
 forge_loader_range=[49,)
 forge_version_range=[49,)
-forge_version=49.0.11
+forge_version=49.0.13
 
 # Neoforge Settings
 neoforge_loader_range=[1,)
-neoforge_version_range=[20.4,)
-neoforge_version=20.4.49-beta
+neoforge_version_range=[20.4.72,)
+neoforge_version=20.4.73-beta
