--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,13 @@ import groovy.json.JsonSlurper
 plugins {
     // Required for NeoGradle
     id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
+    id 'com.modrinth.minotaur' version '2.8.3' apply(false)
+    id 'net.darkhax.curseforgegradle' version '1.1.15' apply(false)
 }
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'maven-publish'
 
     java.toolchain.languageVersion = JavaLanguageVersion.of(17)
     java.withSourcesJar()
@@ -101,5 +104,28 @@ subprojects {
     tasks.withType(GenerateModuleMetadata).configureEach {
 
         enabled = false
+    }
+
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                from components.java
+                artifactId base.archivesName.get()
+            }
+        }
+
+        repositories {
+            if (System.getenv("cloudUsername") == null && System.getenv("cloudPassword") == null) {
+                mavenLocal()
+            }
+            else maven {
+                name = "cloudsmith"
+                url = "https://maven.cloudsmith.io/geckolib3/geckolib/"
+                credentials {
+                    username = System.getenv("cloudUsername")
+                    password = System.getenv("cloudPassword")
+                }
+            }
+        }
     }
 }
