--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,13 +1,10 @@
 plugins {
-    id 'fabric-loom' version '1.3-SNAPSHOT'
+    id 'fabric-loom' version '1.4-SNAPSHOT'
     id 'java'
     id 'maven-publish'
-    id 'com.modrinth.minotaur' version '2.8.3'
-    id 'net.darkhax.curseforgegradle' version '1.1.15'
+    id 'com.modrinth.minotaur'
+    id 'net.darkhax.curseforgegradle'
 }
-
-import groovy.json.JsonOutput
-import groovy.json.JsonSlurper
 
 sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
 
@@ -19,12 +16,6 @@ repositories {
     mavenCentral() {
         content {
             includeGroup "com.google.code.findbugs"
-        }
-    }
-    maven {
-        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
-        content {
-            includeGroup "com.eliotlash.mclib"
         }
     }
     maven {
@@ -43,27 +34,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 
     compileOnly project(':common')
-    implementation("com.eliotlash.mclib:mclib:${mclib_version}")
-    include("com.eliotlash.mclib:mclib:${mclib_version}")
     implementation "com.google.code.findbugs:jsr305:3.0.1" //Provides the Nullable annotations
-}
-
-tasks.withType(org.gradle.jvm.tasks.Jar).configureEach {
-    from rootProject.file("LICENSE")
-}
-
-jar {
-    manifest {
-        attributes([
-                "Specification-Title"     : "${mod_display_name}",
-                "Specification-Vendor"    : mod_authors,
-                "Specification-Version"   : "4",
-                "Implementation-Title"    : mod_display_name + " " + project.name,
-                "Implementation-Version"  : version,
-                "Implementation-Vendor"   : mod_authors,
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-        ])
-    }
 }
 
 loom {
@@ -87,15 +58,7 @@ loom {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    it.options.setEncoding('UTF-8')
-    it.options.release.set(17)
     source(project(":common").sourceSets.main.allSource)
-}
-
-java {
-	withSourcesJar()
-    withJavadocJar()
-    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
 }
 
 sourcesJar {
@@ -103,33 +66,7 @@ sourcesJar {
 }
 
 processResources {
-
    from project(":common").sourceSets.main.resources
-}
-
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            artifactId base.archivesName.get()
-            from components.java
-        }
-    }
-    repositories {
-        if (System.getenv("cloudUsername") == null && System.getenv("cloudPassword") == null) {
-            mavenLocal()
-        }
-        else maven {
-            name = "cloudsmith"
-            url = "https://maven.cloudsmith.io/geckolib3/geckolib/"
-            credentials {
-                def envUsername = System.getenv("cloudUsername")
-                def envPassword = System.getenv("cloudPassword")
-                username = envUsername == null ? findProperty("cloudUsername") : envUsername
-                password = envPassword == null ? findProperty("cloudPassword") : envPassword
-            }
-        }
-    }
 }
 
 modrinth {
@@ -142,6 +79,7 @@ modrinth {
     gameVersions = [minecraft_version]
     versionType = "release"
     loaders = ['fabric']
+    debugMode = true
     dependencies {
         required.project "fabric-api"
     }
@@ -150,6 +88,7 @@ modrinth {
 }
 
 task publishToCurseForge(type:  net.darkhax.curseforgegradle.TaskPublishCurseForge) {
+
     group = "publishing"
     apiToken = System.getenv("curseforge.apitoken") ?: "Invalid/No API Token Found"
 
@@ -159,7 +98,7 @@ task publishToCurseForge(type:  net.darkhax.curseforgegradle.TaskPublishCurseFor
     mainFile.addGameVersion(minecraft_version)
     mainFile.addJavaVersion("Java 17")
     mainFile.changelog = rootProject.file("changelog.txt").text
-
+    debugMode = true
     //https://github.com/Darkhax/CurseForgeGradle#available-properties
 }
 
