--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -6,12 +6,9 @@ plugins {
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
     id 'org.spongepowered.mixin' version '0.7.+'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
-    id 'com.modrinth.minotaur' version '2.8.3'
-    id 'net.darkhax.curseforgegradle' version '1.1.15'
+    id 'com.modrinth.minotaur'
+    id 'net.darkhax.curseforgegradle'
 }
-
-import groovy.json.JsonOutput
-import groovy.json.JsonSlurper
 
 base {
     archivesName = "geckolib-forge-${minecraft_version}"
@@ -79,65 +76,21 @@ minecraft {
     }
 }
 
-java {
-    withSourcesJar()
-    withJavadocJar()
-    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
-}
-
-repositories {
-    maven { url "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/" }
-}
-
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     compileOnly project(":common")
-    minecraftLibrary(group: 'com.eliotlash.mclib', name: 'mclib', version: "${mclib_version}")
-    jarJar(group: 'com.eliotlash.mclib', name: 'mclib', version: "[${mclib_version},)")
     if (System.getProperty("idea.sync.active") != "true") {
         annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     }
 }
 
-jarJar.enable()
-
-//Make the result of jarJar the default.
-tasks.jarJar.configure {
-    it.archiveClassifier.set("")
-    finalizedBy("reobfJarJar")
-}
-
-tasks.jar.configure {
-    it.archiveClassifier.set("slim")
-}
-
-
-tasks.withType(org.gradle.jvm.tasks.Jar).configureEach {
-    from rootProject.file("LICENSE")
-}
 
 tasks.withType(JavaCompile).configureEach {
-    it.options.setEncoding('UTF-8')
-    it.options.release.set(17)
     source(project(":common").sourceSets.main.allSource)
 }
 
 sourcesJar {
     from project(":common").sourceSets.main.allSource
-}
-
-jar {
-    manifest {
-        attributes([
-                "Specification-Title"     : "${mod_display_name}",
-                "Specification-Vendor"    : mod_authors,
-                "Specification-Version"   : "4",
-                "Implementation-Title"    : mod_display_name + " " + project.name,
-                "Implementation-Version"  : version,
-                "Implementation-Vendor"   : mod_authors,
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-        ])
-    }
 }
 
 mixin {
@@ -149,50 +102,16 @@ processResources {
     from project(":common").sourceSets.main.resources
 }
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-            //Excludes the non jij'd jar from being published at all.
-            artifacts = [sourcesJar, javadocJar]
-            jarJar.component(it)
-            artifactId base.archivesName.get()
-            //We don't want users to have mclib as a dep when the jar that's published already contains the dependency.
-            pom.withXml {
-                asNode().dependencies.dependency.each { dep ->
-                    if("mclib".equals(dep.artifactId.last().value().last())) {
-                        assert dep.parent().remove(dep)
-                    }
-                }
-            }
-        }
-    }
-
-    repositories {
-        if (System.getenv("cloudUsername") == null && System.getenv("cloudPassword") == null) {
-            mavenLocal()
-        }
-        else maven {
-            name = "cloudsmith"
-            url = "https://maven.cloudsmith.io/geckolib3/geckolib/"
-            credentials {
-                username = System.getenv("cloudUsername")
-                password = System.getenv("cloudPassword")
-            }
-        }
-    }
-}
-
 modrinth {
 		token = System.getenv("modrinthKey") ?: "Invalid/No API Token Found"
 		projectId = '8BmcQJ2H' 
 		versionNumber = project.version
 		versionName = "Forge ${minecraft_version}"
-		uploadFile = tasks.jarJar
+		uploadFile = tasks.jar.exclude("assets/")
 		changelog = rootProject.file("changelog.txt").text
 		gameVersions = [minecraft_version]
 		loaders = ['forge']
-
+        debugMode = true
         //https://github.com/modrinth/minotaur#available-properties
 }
 
@@ -200,13 +119,13 @@ task publishToCurseForge(type:  net.darkhax.curseforgegradle.TaskPublishCurseFor
     group = "publishing"
     apiToken = System.getenv("curseforge.apitoken") ?: "Invalid/No API Token Found"
 
-    def mainFile = upload(388172, tasks.jarJar)
+    def mainFile = upload(388172, tasks.jar.exclude("assets/"))
     mainFile.releaseType = "release"
     mainFile.addModLoader("Forge")
     mainFile.addGameVersion(minecraft_version)
     mainFile.addJavaVersion("Java 17")
     mainFile.changelog = rootProject.file("changelog.txt").text
-
+    debugMode = true
     //https://github.com/Darkhax/CurseForgeGradle#available-properties
 }
 
