Access widen blockEntityRenderer

--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,3 +8,4 @@ public net.minecraft.client.model.AgeableListModel babyHeadScale
 public net.minecraft.client.model.AgeableListModel babyBodyScale
 public net.minecraft.client.model.AgeableListModel bodyYOffset
 public net.minecraft.client.renderer.LevelRenderer renderBuffers
+public net.minecraft.client.renderer.entity.ItemRenderer blockEntityRenderer # blockEntityRenderer
