--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,3 +8,4 @@ public net.minecraft.client.model.AgeableListModel f_102010_ # babyHeadScale
 public net.minecraft.client.model.AgeableListModel f_102011_ # babyBodyScale
 public net.minecraft.client.model.AgeableListModel f_102012_ # bodyYOffset
 public net.minecraft.client.renderer.LevelRenderer f_109464_ # renderBuffers
+public net.minecraft.client.renderer.entity.ItemRenderer f_174223_ # blockEntityRenderer
