Port GeoItems to Common using RenderProvider and two mixins

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -82,6 +82,10 @@ dependencies {
     if (System.getProperty("idea.sync.active") != "true") {
         annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     }
+    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.3.5"))
+    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.3.5")) {
+        jarJar.ranged(it, "[0.3.5,)") //TODO figure out jarJar again
+    }
 }
 
 
