--- a/gradle.properties
+++ b/gradle.properties
@@ -31,3 +31,5 @@ forge_version=49.0.26
 neoforge_loader_range=[1,)
 neoforge_version_range=[20.4.72,)
 neoforge_version=20.4.112-beta
+neogradle.subsystems.decompiler.maxMemory=8g
+neogradle.subsystems.decompiler.maxThreads=4
