--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -51,8 +51,12 @@ tasks.withType(JavaCompile).matching(it -> !it.name.startsWith("neo")).configure
     source(project(":common").sourceSets.main.allSource)
 }
 
-sourcesJar {
-    from project(":common").sourceSets.main.allSource
+tasks.named("sourcesJar", Jar) {
+    from(project(":common").sourceSets.main.allSource)
+}
+
+tasks.withType(Javadoc).configureEach {
+    source(project(":common").sourceSets.main.allJava)
 }
 
 processResources {
@@ -64,7 +68,7 @@ modrinth {
 		projectId = '8BmcQJ2H' 
 		versionNumber = project.version
 		versionName = "NeoForge ${minecraft_version}"
-		uploadFile = tasks.jar.exclude("assets/")
+		uploadFile = tasks.jar
 		changelog = rootProject.file("changelog.txt").text
 		gameVersions = [minecraft_version]
 		loaders = ['neoforge']
@@ -76,7 +80,7 @@ task publishToCurseForge(type:  net.darkhax.curseforgegradle.TaskPublishCurseFor
     group = "publishing"
     apiToken = System.getenv("curseforge.apitoken") ?: "Invalid/No API Token Found"
 
-    def mainFile = upload(388172, tasks.jar.exclude("assets/"))
+    def mainFile = upload(388172, tasks.jar)
     mainFile.releaseType = "release"
     mainFile.addModLoader("NeoForge")
     mainFile.addGameVersion(minecraft_version)
@@ -84,6 +88,15 @@ task publishToCurseForge(type:  net.darkhax.curseforgegradle.TaskPublishCurseFor
     mainFile.changelog = rootProject.file("changelog.txt").text
     debugMode = true
     //https://github.com/Darkhax/CurseForgeGradle#available-properties
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            artifactId base.archivesName.get()
+        }
+    }
 }
 
 publish.finalizedBy('modrinth', 'publishToCurseForge')
