--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ fabric_loader_version=0.15.3
 fabric_api_version=0.92.1+1.20.4
 
 # Forge Settings
-forge_loader_range=[49,)
+forge_loader_version_range=[49,)
 forge_version_range=[49,)
 forge_version=49.0.26
 
