--- a/gradle.properties
+++ b/gradle.properties
@@ -14,19 +14,19 @@ mod_description=GeckoLib is an animation engine for Minecraft Mods, with support
 # General Dependencies
 minecraft_version_range=[1.20.4,)
 minecraft_version=1.20.4
-mappings_mc_version=1.20.3
-parchment_version=2023.12.31
+mappings_mc_version=1.20.4
+parchment_version=2024.02.25
 
 # Fabric Settings
-fabric_loader_version=0.15.6
-fabric_api_version=0.95.4+1.20.4
+fabric_loader_version=0.15.7
+fabric_api_version=0.96.4+1.20.4
 
 # Forge Settings
 forge_loader_version_range=[49,)
 forge_version_range=[49,)
-forge_version=49.0.27
+forge_version=49.0.34
 
 # Neoforge Settings
-neoforge_loader_range=[1,)
-neoforge_version_range=[20.4.147,)
-neoforge_version=20.4.112-beta
+neoforge_loader_range=[2,)
+neoforge_version_range=[20.4.167,)
+neoforge_version=20.4.200
