--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'com.modrinth.minotaur' version '2.8.3'
     id 'net.darkhax.curseforgegradle' version '1.1.15'
+    id 'org.jetbrains.gradle.plugin.idea-ext' version "1.1.8"
 }
 
 import groovy.json.JsonOutput
