--- a/gradle.properties
+++ b/gradle.properties
@@ -3,30 +3,30 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Project Settings
-mod_id=geckolib
-version=4.5
-mod_display_name=GeckoLib 4
+modId=geckolib
+modDisplayName=GeckoLib 4
 group=software.bernie.geckolib
-mod_license=MIT
-mod_authors=Gecko, Eliot, AzureDoom, DerToaster, Tslat, Witixin
-mod_description=GeckoLib is an animation engine for Minecraft Mods, with support for complex 3D keyframe-based animations, 30+ easings, concurrent animation support, sound and particle keyframes, event keyframes, and more.
+modLicense=MIT
+modAuthors=Gecko, Eliot, AzureDoom, DerToaster, Tslat, Witixin
+modDescription=GeckoLib is an animation engine for Minecraft Mods, with support for complex 3D keyframe-based animations, 30+ easings, concurrent animation support, sound and particle keyframes, event keyframes, and more.
+#version=4.5
 
-# General Dependencies
-minecraft_version_range=[1.20.4,)
-minecraft_version=1.20.4
-mappings_mc_version=1.20.4
-parchment_version=2024.02.25
-
-# Fabric Settings
-fabric_loader_version=0.15.7
-fabric_api_version=0.96.11+1.20.4
-
-# Forge Settings
-forge_loader_version_range=[49,)
-forge_version_range=[49,)
-forge_version=49.0.38
-
-# Neoforge Settings
-neoforge_loader_range=[2,)
-neoforge_version_range=[20.4.167,)
-neoforge_version=20.4.214
+## General Dependencies
+#minecraft_version_range=[1.20.4,)
+#minecraft_version=1.20.4
+#mappings_mc_version=1.20.4
+#parchment_version=2024.02.25
+#
+## Fabric Settings
+#fabric_loader_version=0.15.7
+#fabric_api_version=0.96.11+1.20.4
+#
+## Forge Settings
+#forge_loader_version_range=[49,)
+#forge_version_range=[49,)
+#forge_version=49.0.38
+#
+## Neoforge Settings
+#neoforge_loader_range=[2,)
+#neoforge_version_range=[20.4.167,)
+#neoforge_version=20.4.214
