--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,6 +1,5 @@
 public net.minecraft.client.model.geom.ModelPart$Cube
 public net.minecraft.client.model.geom.ModelPart f_104212_ # cubes
-public net.minecraft.world.entity.Entity m_7939_()Lnet/minecraft/world/phys/Vec3; # getLeashOffset
 public net.minecraft.client.model.AgeableListModel f_102007_ # scaleHead
 public net.minecraft.client.model.AgeableListModel f_170338_ # babyYHeadOffset
 public net.minecraft.client.model.AgeableListModel f_170339_ # babyZHeadOffset
@@ -8,4 +7,6 @@ public net.minecraft.client.model.AgeableListModel f_102010_ # babyHeadScale
 public net.minecraft.client.model.AgeableListModel f_102011_ # babyBodyScale
 public net.minecraft.client.model.AgeableListModel f_102012_ # bodyYOffset
 public net.minecraft.client.renderer.LevelRenderer f_109464_ # renderBuffers
+
 public net.minecraft.client.renderer.entity.ItemRenderer f_174223_ # blockEntityRenderer
+public net.minecraft.client.renderer.LevelRenderer m_109817_()Z # shouldShowEntityOutlines
