--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,6 +1,5 @@
 public net.minecraft.client.model.geom.ModelPart$Cube
 public net.minecraft.client.model.geom.ModelPart cubes
-public net.minecraft.world.entity.Entity getLeashOffset()Lnet/minecraft/world/phys/Vec3; # getLeashOffset
 public net.minecraft.client.model.AgeableListModel scaleHead
 public net.minecraft.client.model.AgeableListModel babyYHeadOffset
 public net.minecraft.client.model.AgeableListModel babyZHeadOffset
@@ -8,4 +7,6 @@ public net.minecraft.client.model.AgeableListModel babyHeadScale
 public net.minecraft.client.model.AgeableListModel babyBodyScale
 public net.minecraft.client.model.AgeableListModel bodyYOffset
 public net.minecraft.client.renderer.LevelRenderer renderBuffers
-public net.minecraft.client.renderer.entity.ItemRenderer blockEntityRenderer # blockEntityRenderer
+
+public net.minecraft.client.renderer.entity.ItemRenderer blockEntityRenderer
+public net.minecraft.client.renderer.LevelRenderer shouldShowEntityOutlines()Z
